2005-12-19  Tom Tromey  <tromey@redhat.com>

	* bytecode/byteutil.hh (zero_if_opcode): Commented.
	(invert_if_opcode): Likewise.

2005-12-12  Tom Tromey  <tromey@redhat.com>

	* model/method.cc (model_method): Updated.
	(hides_or_overrides_p): Set 'override'.
	(check_override): Updated.
	* model/method.hh (model_method::overrides): Removed.
	(model_method::override): New field.
	(model_method): Updated.
	(model_method::get_override): New method.
	(model_method::get_parent): Likewise.
	* Makefile.in: Rebuilt.
	* Makefile.am (headers): Added bridge.hh.
	(bytecode_sources): Added bridge.cc.
	* bytecode/classwriter.hh (class_writer::write_method): Added
	argument.
	* bytecode/classwriter.cc: Include bridge.hh.
	(write): Create bridge method.
	(write_method): Added 'is_bridge' argument.
	* bytecode/bridge.cc: New file.
	* bytecode/bridge.hh: New file.

2005-12-12  Tom Tromey  <tromey@redhat.com>

	* bytecode/generate.cc (find_method): Look for erasure of return
	type.
	(find_field): Look for erasure of field's type.

2005-12-12  Tom Tromey  <tromey@redhat.com>

	* model/memberref.cc (resolve_as_enum_constant): Resolve 'real'.
	* bytecode/generate.hh (bytecode_generator::handle_enum_switch):
	Declare.
	* bytecode/generate.cc (handle_enum_switch): New method.
	(visit_switch): Use it.

2005-12-02  Tom Tromey  <tromey@redhat.com>

	* model/field.cc (model_field): Initialize new field.
	(model_field): Added 'other' argument.
	(apply_type_map): Updated.
	(erasure): Updated.  Delegate to parent if one exists.
	* model/field.hh (model_field::parent): New field.
	(model_field): New constructor.
	* model/method.cc (model_method): Initialize new field.
	(erasure): Delegate to parent, if it exists.
	(get_erased_return_type): New method.
	* model/method.hh (model_method::parent): New field.
	(model_method): Initialize new field.
	(model_method::get_erased_return_type): Declare.
	* bytecode/generate.hh (bytecode_generator::handle_invocation):
	Updated.